--- a/style.css
+++ b/style.css
@@ -19,6 +19,14 @@
     background-size: cover;
     position: relative;
 }
+.armyane-header{
+    min-height: 100vh;
+    width: 100%;
+    background-image: linear-gradient(rgba(163, 120, 70, 0.517),rgba(0, 0, 0, 0)), url(images/armyane.jpg);
+    background-position: center;
+    background-size: cover;
+    position: relative;
+}
 nav{
     display: flex;
     padding: 1% 1%;
@@ -85,11 +93,26 @@ nav img{
     transform: translate(-50%,-50%);
     text-align: center;
 }
+.top-text-armyane{
+    color: #000;
+    position: absolute;
+    padding: 12px 15px;
+    top: 80%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    text-align: center;
+    border: 1px solid #000;
+    border-radius: 5px;
+    background-color: rgba(255,255,255, 0.5);
+}
 .top-text h1{
     font-size: 106px;
 }
 .top-text p{
     font-size: 28px;
+}
+.top-text-armyane p{
+    font-size: 20px;
 }
 .button{
     display: inline-block;
