--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@
 .armyane-header{
     min-height: 100vh;
     width: 100%;
-    background-image: linear-gradient(rgba(163, 120, 70, 0.3),rgba(0, 0, 0, 0)), url(https://moontr3.github.io/dabot/images/armyane.jpg);
+    background-image: linear-gradient(rgba(163, 120, 70, 0.3),rgba(0, 0, 0, 0)), url(images/armyane.jpg);
     background-position: center;
     background-size: cover;
     position: relative;
